--- a/starter-code/src/index.css
+++ b/starter-code/src/index.css
@@ -12,3 +12,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.App h1 {
+  font-size: 1.5em;
+  font-weight: bold;
+  text-align: center;
+}
